# chromium-lite

./: DEPS  README  README.md  make_content_shell_pak.sh  zlib_no_MOZ_prefix.patch
01a-base/: CMakeLists.txt  time_formatting_noicufork.patch
01b-mojo/: CMakeLists.txt
01b-skia/: CMakeLists.txt  Toolchain-arm.cmake  Toolchain-x86.cmake  Toolchain-x86_64.cmake
01b-v8/: CMakeLists.txt  Toolchain-arm.cmake  Toolchain-x86.cmake  Toolchain-x86_64.cmake
01c-v8/: CMakeLists.txt  Toolchain-x86.cmake  Toolchain-x86_64.cmake
01d-mojo/: CMakeLists.txt
01d-skia/: CMakeLists.txt
02a-url/: CMakeLists-Blink.txt  CMakeLists.txt
02b-crypto/: CMakeLists.txt  nss_general_backport.patch  nss_util_backport_loadnsslibraries.patch  system_openssl_backport.patch
02b-crypto/nss_general_backport/: ec_private_key_nss.cc  hmac_nss.cc  rsa_private_key_nss.cc  secure_hash_default.cc  signature_creator_nss.cc  symmetric_key_nss.cc
02c-ipc/: CMakeLists.txt
02c-sql/: CMakeLists.txt  system_sqlite_backport.patch
02d-gin/: CMakeLists.txt
02d-sdch/: CMakeLists.txt
02d-sql/: CMakeLists.txt
02d-ui_gfx/: CMakeLists.txt
02e-gpu_command_buffer/: CMakeLists.txt  use_chromium_gl2_header.patch  use_chromium_gles_headers.patch
02f-sql/: CMakeLists.txt
02z-ui_strings/: CMakeLists.txt
03-net/: CMakeLists.txt
03a-net/: CMakeLists.txt  des_supportnss.patch  ftp_util_noicufork.patch  nss_general_backport.patch  quic_nochacha.patch  url_request_nobrotli.patch
03d-ui_gfx/: CMakeLists.txt
03e-ui_strings/: CMakeLists.txt
03z-ui_resources/: CMakeLists.txt
04a-mojo/: CMakeLists.txt
04b-storage/: CMakeLists.txt
04d-ui_events/: CMakeLists.txt
04e-ui_resources/: CMakeLists.txt
05a-ipc/: CMakeLists.txt
05a-media/: CMakeLists.txt  Toolchain-arm.cmake  Toolchain-x86_64.cmake
05b-skia/: ARM_disable_neon.patch  CMakeLists.txt  Toolchain-arm.cmake  Toolchain-x86.cmake  Toolchain-x86_64.cmake
05b-ui_base/: CMakeLists.txt
06a-ui_gfx/: CMakeLists-Blink.txt  CMakeLists.txt  png_codec_nolibpng12fork.patch  z_OZONE_support_nativeviewaccessible.patch
06a-ui_gl/: CMakeLists.txt
06b-ui_gl/: CMakeLists.txt
07a-ui_accessibility/: CMakeLists.txt
07a-ui_display/: CMakeLists.txt
07b-gpu/: CMakeLists.txt
07b-ui_events/: CMakeLists.txt  OZONE_enable_xkbcommon_support.patch  fix_xkb_keysym.patch
07c-ozone/: CMakeLists.txt  ozone_windowmanager_noauradeps.patch
07c-ui_ozone/: CMakeLists.txt
08a-cc/: CMakeLists.txt
08a-ui_base/: CMakeLists.txt
08b-media/: CMakeLists.txt  Toolchain-arm.cmake  Toolchain-x86.cmake  Toolchain-x86_64.cmake  enable_ppapi.patch  force_ppapi.patch
09a-blink/: CMakeLists.txt  Toolchain-arm.cmake  Toolchain-x86.cmake
09a-ui_accessibility/: z_OZONE_provide_axplatformnodeauralinux.patch
09a-ui_gl/: CMakeLists.txt
09b-ui_gl/: CMakeLists.txt
10a-gpu/: CMakeLists.txt
10a-gpu_blink/: CMakeLists.txt
10a-ui_aura/: CMakeLists.txt
11a-cc/: CMakeLists-Blink.txt  CMakeLists.txt  Toolchain-arm.cmake  Toolchain-x86.cmake  Toolchain-x86_64.cmake
11a-ui_shell_dialogs/: CMakeLists.txt
11a-ui_touch_selection/: CMakeLists.txt
11a-ui_views/: CMakeLists.txt
11b-ui_shapshot/: CMakeLists.txt
12a-blink/: CMakeLists.txt  Toolchain-arm.cmake  Toolchain-x86.cmake  Toolchain-x86_64.cmake  core_with_deps.lst  fix_generated_bindings.sh  mediarecorder_fix_event.patch
12a-content_browser/: CMakeLists.txt  disable_battery_and_vibration_status.patch  disable_battery_vibration_bluetooth.patch  disable_speech_recognition.patch  zygote_sandbox_use_nss.patch
12b-ui_compositor/: CMakeLists.txt
13a-cc_blink/: CMakeLists.txt
13a-ui_views/: CMakeLists.txt
13b-gpu_blink/: CMakeLists.txt
13b-ui_events_blink/: CMakeLists.txt
13c-ui_aura/: CMakeLists.txt
13c-ui_events_blink/: CMakeLists.txt
13d-ui_aura/: CMakeLists.txt
14a-ui_touch_selection/: CMakeLists.txt
14b-ui_snapshot/: CMakeLists.txt
14c-ui_shell_dialogs/: CMakeLists.txt
14d-media_blink/: CMakeLists.txt
15a-content/: CMakeLists.txt  OZONE_disable_mediaozoneplatform.patch  disable_battery_vibration_bluetooth.patch  renderer_disable_battery_vibration_bluetooth_usb.patch  sandbox_linux_x86_disable_seccomp_bpf.patch
15a-content_browser/: CMakeLists.txt  url_formatter_noicufork.patch  webcrypto_use_nss.patch  z_disable_client_cert.patch  z_disable_webmediaplayerimpl.patch  z_time_zone_monitor_noicufork.patch
16a-ui_content_accelerators/: CMakeLists.txt
16a-ui_views/: CMakeLists.txt
16b-ui_web_dialogs/: CMakeLists.txt
17a-ui_views/: CMakeLists.txt
18a-content_shell/: CMakeLists.txt  disable_bluetooth.patch  disable_bluetooth_test.patch  disable_tests_breakpad.patch
XX-ui_strings/: CMakeLists.txt
YY-ui_resources/: CMakeLists.txt
base/: CMakeLists.txt
optional/01c-libsrtp/: CMakeLists.txt
optional/01c-webrtc/: CMakeLists.txt  Toolchain-x86.cmake
optional/02g-gin/: CMakeLists.txt
optional/03b-freetype/: CMakeLists.txt
optional/03c-webrtc/: CMakeLists.txt
optional/04c-fontconfig/: CMakeLists.txt
optional/04c-freetype/: CMakeLists.txt
optional/11b-nativeclient/: CMakeLists.txt
optional/11c-ppapi/: CMakeLists.txt
skia/: CMakeLists.txt  Toolchain-arm.cmake  Toolchain-x86.cmake  Toolchain-x86_64.cmake
url/: CMakeLists.txt
z_centos7/: harfbuzz-0.9.36-1.el7.centos.x86_64.rpm  harfbuzz-devel-0.9.36-1.el7.centos.x86_64.rpm  harfbuzz-icu-0.9.36-1.el7.centos.x86_64.rpm  leveldb-1.12.0-5.el7.x86_64.rpm  leveldb-devel-1.12.0-5.el7.x86_64.rpm  libicu-devel-52.1-6.el7.centos.x86_64.rpm  libicu-devel-54.1-1.el7.centos.x86_64.rpm  libwebp-0.4.4-1.fc21.x86_64.rpm  libwebp-devel-0.4.4-1.fc21.x86_64.rpm  libxkbcommon-0.5.0-1.el7.x86_64.rpm  libxkbcommon-devel-0.5.0-1.el7.x86_64.rpm  open-vcdiff-0.8.3-1.x86_64.rpm  open-vcdiff-devel-0.8.3-1.x86_64.rpm  yasm-1.2.0-4.el7.x86_64.rpm
z_centos7/49.0.2593.0/: harfbuzz-0.9.36-1.el7.centos.x86_64.rpm  harfbuzz-devel-0.9.36-1.el7.centos.x86_64.rpm  harfbuzz-icu-0.9.36-1.el7.centos.x86_64.rpm
z_examples/base/: chromium_base-1_log.cc  chromium_base-2.cc  chromium_base-2_file.cc  chromium_base-3.cc  chromium_base-3_cmdline.cc  (+4 more)
(+36 files in other folders)
